--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/yeyang52/yenai-plugin.git"
+    "url": "https://github.com/ycxom/yenai-plugin.git"
   },
   "keywords": [
     "Yunzai-Bot",
